# bmstu-5sem-web-grpc_cpp-v1

./: CMakeLists.txt  client.cpp  example.grpc.pb.cc  example.grpc.pb.h  example.pb.cc  example.pb.h  example.proto  server.cpp
